<resources>

    <string name="app_name">my_first_project</string>

    <string name="cancel">Cancel</string>
    <string name="back">Back</string>

    <string name="login_now">Login now</string>
    <string name="submit">Submit</string>
    <string name="error_while_logging_in">Error while logging in</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_name">Enter name</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="register_now">Register now</string>
    <string name="reset_password">Reset password</string>

    <!-- Reset password   -->
    <string name="topic_reset_password">Reset password</string>
    <string name="enter_new_password">New password</string>
    <string name="enter_confirmation_password">Confirmation password</string>

    <!--  Profile  -->
    <string name="profile">Profile</string>

    <!-- PERSONAL INFO -->
    <string name="personal_information">Personal information</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>

    <string name="hint_name">Name*></string>
    <string name="hint_surname">Surname*</string>


    <!--  Date of Birth    -->
    <string name="date_of_birth">Date of Birth</string>
    <string name="hint_date">DATE OF BIRTH*</string>

    <!-- Gender    -->
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <!--    -->
    <string name="studio">Студия</string>
    <string name="one_room_flat">1-комн.</string>
    <string name="two_rooms_flat">2-комн.</string>
    <string name="three_rooms_flat">3-комн.</string>
    <string name="four_rooms_flat">4-комн.</string>
    <string name="five_rooms_flat">5-комн.</string>

    <!-- About    -->
    <string name="write">write about yourself</string>

    <!--  Contacts  -->
    <string name="contacts">contacts</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="social_media">Social Media</string>

    <!-- Save   -->
    <string name="account_info_save">save</string>

    <!-- Delete   -->
    <string name="delete_profile">delete profile</string>

    <string name="about">Обо мне</string>
    <string name="save">Сохранить</string>
    <string name="modify">Изменить</string>
    <string name="exit">Выйти</string>


    <string name="profile_info">%1$s %2$s, %3$s</string>

    <!--  NavigationView  -->
    <string name="card">Card</string>
    <string name="list">List</string>
    <string name="dialogs">Dialogs</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_compilation">Compilation</string>
    <string name="title_favorite">Favorites</string>
    <string name="title_chat">Chat</string>
    <string name="title_cabinet">Cabinet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="firstname">Имя</string>
    <string name="lastname">Фамилия</string>
    <string name="phone">Номер телефона</string>
    <string name="patronymic">Отчество</string>

    <string name="hide_ad">Скрыть объявление</string>
    <string name="do_not_show_ad">Не показывать объявление</string>
    <string name="call">Позвонить</string>
    <string name="like">like</string>
    <string name="skip">skip</string>
    <string name="dislike">dislike</string>
    <string name="mainimage">mainImage</string>
    <string name="metro">metro</string>
    <string name="description">Описание</string>

</resources>