<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ru.spbstu.mobileapplication.presentation.bottom_navigation.fragments.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_announcementDetailsFragment"
            app:destination="@id/announcementDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_compilation"
        android:name="ru.spbstu.mobileapplication.presentation.bottom_navigation.fragments.compilation.CompilationFragment"
        android:label="@string/title_compilation"
        tools:layout="@layout/fragment_compilation" >
        <action
            android:id="@+id/action_navigation_compilation_to_announcementDetailsFragment"
            app:destination="@id/announcementDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="ru.spbstu.mobileapplication.presentation.bottom_navigation.fragments.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite">
        <action
            android:id="@+id/action_navigation_favorite_to_announcementDetailsFragment"
            app:destination="@id/announcementDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_chat"
        android:name="ru.spbstu.mobileapplication.presentation.bottom_navigation.fragments.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_cabinet"
        android:name="ru.spbstu.mobileapplication.presentation.bottom_navigation.fragments.cabinet.CabinetFragment"
        android:label="@string/title_cabinet"
        tools:layout="@layout/fragment_cabinet">
        <action
            android:id="@+id/action_navigation_cabinet_to_mainActivity"
            app:destination="@id/mainActivity" />
        <action
            android:id="@+id/action_navigation_cabinet_to_modifyUserDataFragment"
            app:destination="@id/modifyUserDataFragment" />
    </fragment>
    <activity
        android:id="@+id/mainActivity"
        android:name="ru.spbstu.mobileapplication.presentation.authorization_activity.MainActivity"
        android:label="MainActivity" />
    <fragment
        android:id="@+id/modifyUserDataFragment"
        android:name="ru.spbstu.mobileapplication.presentation.bottom_navigation.fragments.modify.ModifyUserDataFragment"
        android:label="fragment_modify_user_data"
        tools:layout="@layout/fragment_modify_user_data">
        <action
            android:id="@+id/action_modifyUserDataFragment_to_navigation_cabinet"
            app:destination="@id/navigation_cabinet" />
    </fragment>
    <fragment
        android:id="@+id/announcementDetailsFragment"
        android:name="ru.spbstu.mobileapplication.presentation.bottom_navigation.fragments.announcement.AnnouncementDetailsFragment"
        android:label="fragment_announcement_details"
        tools:layout="@layout/fragment_announcement_details">
        <action
            android:id="@+id/action_announcementDetailsFragment_to_navigation_compilation"
            app:destination="@id/navigation_compilation" />
        <action
            android:id="@+id/action_announcementDetailsFragment_to_navigation_favorite"
            app:destination="@id/navigation_favorite" />
        <action
            android:id="@+id/action_announcementDetailsFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
</navigation>